--- a/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/currentTasksEdit.xhtml
@@ -53,8 +53,9 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.tasks}" outcome="tasks"/></li>
-        <li><a href="">#{msgs.detailsDesArbeitsschritts}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.tasks}" url="tasks.jsf"/>
+        <p:menuitem value="#{msgs.detailsDesArbeitsschritts}"/>
     </ui:define>
+
 </ui:composition>
