--- a/Kitodo/src/main/webapp/pages/desktop.xhtml
+++ b/Kitodo/src/main/webapp/pages/desktop.xhtml
@@ -86,4 +86,9 @@
             </div>
         </ui:fragment>
     </ui:define>
+
+    <ui:define name="breadcrumbs">
+        <p:menuitem value="#{msgs.desktop}"/>
+    </ui:define>
+
 </ui:composition>
