--- a/Kitodo/src/main/webapp/pages/login.xhtml
+++ b/Kitodo/src/main/webapp/pages/login.xhtml
@@ -21,7 +21,7 @@
         <f:viewAction action="#{LoginForm.redirectToDesktop()}"/>
     </f:metadata>
 
-    <ui:define name="header">
+    <ui:define name="search">
         <div class="wrapper">
             <section id="portal-logo" class="login-screen">
                 <h:graphicImage name="images/kitodo-logo.svg" alt="Kitodo.Production" height="36" id="kitodo-logo"/>
@@ -30,9 +30,9 @@
         </div>
     </ui:define>
 
-    <ui:define name="breadcrumbs">
+    <ui:define name="breadcrumbs" />
 
-    </ui:define>
+    <ui:define name="navigation" />
 
     <ui:define name="content">
         <div class="wrapper">
