--- a/Kitodo/src/main/webapp/pages/clientEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/clientEdit.xhtml
@@ -79,20 +79,11 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.users}" outcome="users"/></li>
-        <li>
-            <a href="">
-                <ui:fragment rendered="#{isEditMode}">
-                    #{msgs.clientEdit}
-                </ui:fragment>
-                <ui:fragment rendered="#{isCreateMode}">
-                    #{msgs.clientNew}
-                </ui:fragment>
-                <ui:fragment rendered="#{isViewMode}">
-                    #{msgs.clientView}
-                </ui:fragment>
-            </a>
-        </li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.users}" url="users.jsf"/>
+        <p:menuitem value="#{msgs.clientEdit}" rendered="#{isEditMode}"/>
+        <p:menuitem value="#{msgs.clientNew}" rendered="#{isCreateMode}"/>
+        <p:menuitem value="#{msgs.clientView}" rendered="#{isViewMode}"/>
     </ui:define>
+
 </ui:composition>
