--- a/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapgroupEdit.xhtml
@@ -231,20 +231,11 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.users}" outcome="users"/></li>
-        <li>
-            <a href="">
-                <ui:fragment rendered="#{isCreateMode}">
-                    #{msgs.createNewLdapGroup}
-                </ui:fragment>
-                <ui:fragment rendered="#{isEditMode}">
-                    #{msgs.ldapGroupEdit}
-                </ui:fragment>
-                <ui:fragment rendered="#{isViewMode}">
-                    #{msgs.ldapGroupView}
-                </ui:fragment>
-            </a>
-        </li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.users}" url="users.jsf"/>
+        <p:menuitem value="#{msgs.createNewLdapGroup}" rendered="#{isCreateMode}"/>
+        <p:menuitem value="#{msgs.ldapGroupEdit}" rendered="#{isEditMode}"/>
+        <p:menuitem value="#{msgs.ldapGroupView}" rendered="#{isViewMode}"/>
     </ui:define>
+
 </ui:composition>
