--- a/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/ldapserverEdit.xhtml
@@ -198,20 +198,11 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.users}" outcome="users"/></li>
-        <li>
-            <a href="">
-                <ui:fragment rendered="#{isCreateMode}">
-                    #{msgs.ldapServerNew}
-                </ui:fragment>
-                <ui:fragment rendered="#{isEditMode}">
-                    #{msgs.ldapServerEdit}
-                </ui:fragment>
-                <ui:fragment rendered="#{isViewMode}">
-                    #{msgs.ldapServerView}
-                </ui:fragment>
-            </a>
-        </li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.users}" url="users.jsf"/>
+        <p:menuitem value="#{msgs.ldapServerNew}" rendered="#{isCreateMode}"/>
+        <p:menuitem value="#{msgs.ldapServerEdit}" rendered="#{isEditMode}"/>
+        <p:menuitem value="#{msgs.ldapServerView}" rendered="#{isViewMode}"/>
     </ui:define>
+
 </ui:composition>
