--- a/Kitodo/src/main/webapp/pages/massImport2.xhtml
+++ b/Kitodo/src/main/webapp/pages/massImport2.xhtml
@@ -102,9 +102,9 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
-        <li><a href="">#{msgs.massImport}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.projects}" url="projects.jsf"/>
+        <p:menuitem value="#{msgs.massImport}"/>
     </ui:define>
 
 </ui:composition>
