--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -166,9 +166,11 @@
             <h:outputText value="#{MetadataProcessor.numberOfConvertedImages} / #{MetadataProcessor.numberOfImagesInCurrentTifFolder}"/>
         </p:dialog>
     </ui:define>
+
     <ui:define name="breadcrumbs">
-            <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-            <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
-            <li><a href="">#{msgs.metadataEdit} (#{MetadataProcessor.process.title})</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.processes}" url="processes.jsf"/>
+        <p:menuitem value="#{msgs.metadataEdit} (#{MetadataProcessor.process.title})"/>
     </ui:define>
+
 </ui:composition>
