--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -81,13 +81,10 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
-        <ui:fragment rendered="#{not empty ProcessForm.process.title}">
-            <li><a href="">#{msgs.processEdit}</a></li>
-        </ui:fragment>
-        <ui:fragment rendered="#{empty ProcessForm.process.title}">
-            <li><a href="">#{msgs.createNewProcess}</a></li>
-        </ui:fragment>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.processes}" url="processes.jsf"/>
+        <p:menuitem value="#{msgs.processEdit}" rendered="#{not empty ProcessForm.process.title}"/>
+        <p:menuitem value="#{msgs.createNewProcess}" rendered="#{empty ProcessForm.process.title}"/>
     </ui:define>
+
 </ui:composition>
