--- a/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
+++ b/Kitodo/src/main/webapp/pages/processFromTemplate.xhtml
@@ -64,14 +64,10 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.projects}" outcome="projects"/></li>
-        <ui:fragment rendered="#{not empty ProcessForm.process.title}">
-            <li><a href="">#{msgs.processEdit}</a></li>
-        </ui:fragment>
-        <ui:fragment rendered="#{empty ProcessForm.process.title}">
-            <li><a href="">#{msgs.createNewProcessFromTemplate}</a></li>
-        </ui:fragment>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.projects}" url="projects.jsf"/>
+        <p:menuitem value="#{msgs.processEdit}" rendered="#{not empty ProcessForm.process.title}"/>
+        <p:menuitem value="#{msgs.createNewProcessFromTemplate}" rendered="#{empty ProcessForm.process.title}"/>
     </ui:define>
 
 </ui:composition>
