--- a/Kitodo/src/main/webapp/pages/searchProcess.xhtml
+++ b/Kitodo/src/main/webapp/pages/searchProcess.xhtml
@@ -201,9 +201,11 @@
             </p:tab>
         </p:tabView>
     </ui:define>
+
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.processes}" outcome="processes"/> </li>
-        <li><a href="">#{msgs.extendedSearch}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.processes}" url="processes.jsf"/>
+        <p:menuitem value="#{msgs.extendedSearch}"/>
     </ui:define>
+
 </ui:composition>
