--- a/Kitodo/src/main/webapp/pages/system.xhtml
+++ b/Kitodo/src/main/webapp/pages/system.xhtml
@@ -40,7 +40,8 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><a href="">#{msgs.system}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.system}"/>
     </ui:define>
+
 </ui:composition>
