--- a/Kitodo/src/main/webapp/pages/taskEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskEdit.xhtml
@@ -68,9 +68,10 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.processes}" outcome="processes"/></li>
-        <li><h:link value="#{msgs.processEdit}" outcome="processEdit?id=#{ProcessForm.process.id}"/></li>
-        <li><a href="">#{msgs.taskDetails}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.processes}" url="processes.jsf"/>
+        <p:menuitem value="#{msgs.processEdit}" url="processEdit.jsf?id=#{ProcessForm.process.id}"/>
+        <p:menuitem value="#{msgs.taskDetails}"/>
     </ui:define>
+
 </ui:composition>
