--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -99,25 +99,14 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><h:link value="#{msgs.users}" outcome="users"/></li>
-        <li>
-            <a href="">
-                <ui:fragment rendered="#{isEditMode}">
-                    #{msgs.userEdit}
-                </ui:fragment>
-                <ui:fragment rendered="#{isCreateMode}">
-                    #{msgs.userCreate}
-                </ui:fragment>
-                <ui:fragment rendered="#{isViewMode}">
-                    #{msgs.userView}
-                </ui:fragment>
-                <ui:fragment rendered="#{isConfigMode}">
-                    #{msgs.userConfiguration}
-                </ui:fragment>
-            </a>
-        </li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.users}" url="users.jsf"/>
+        <p:menuitem value="#{msgs.userEdit}" rendered="#{isEditMode}"/>
+        <p:menuitem value="#{msgs.userCreate}" rendered="#{isCreateMode}"/>
+        <p:menuitem value="#{msgs.userView}" rendered="#{isViewMode}"/>
+        <p:menuitem value="#{msgs.userConfiguration}" rendered="#{isConfigMode}"/>
     </ui:define>
+
     <!-- add user groups dialog -->
     <ui:define name="dialog">
         <ui:include src="/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml"/>
