--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -13,9 +13,10 @@
 
 <ui:composition
         template="/WEB-INF/templates/baseListView.xhtml"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
-        xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+        xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="contentHeader">
         <h3>#{msgs.users}</h3>
@@ -85,7 +86,8 @@
     </ui:define>
 
     <ui:define name="breadcrumbs">
-        <li><h:link value="#{msgs.desktop}" outcome="desktop"/></li>
-        <li><a href="">#{msgs.users}</a></li>
+        <p:menuitem value="#{msgs.desktop}" url="desktop.jsf"/>
+        <p:menuitem value="#{msgs.users}"/>
     </ui:define>
+
 </ui:composition>
